<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_sanpham">

    <fragment
        android:id="@+id/nav_sanpham"
        android:name="com.example.duan1_nhom3.ui.SanPhamFragment"
        android:label="@string/menu_sanpham"
        tools:layout="@layout/fragment_san_pham" />

    <fragment
        android:id="@+id/nav_donhang"
        android:name="com.example.duan1_nhom3.ui.QuanLyDonHangFragment"
        android:label="@string/menu_donhang"
        tools:layout="@layout/fragment_quan_ly_don_hang" />

    <fragment
        android:id="@+id/nav_giohang"

        android:name="com.example.duan1_nhom3.ui.GioHangFragment"
        android:label="@string/menu_giohang"
        tools:layout="@layout/fragment_gio_hang" />
    <fragment
        android:id="@+id/nav_qlsanpham"
        android:name="com.example.duan1_nhom3.ui.QuanLySanPhamFragment"
        android:label="@string/menu_qlsanpham"
        tools:layout="@layout/fragment_quan_ly_san_pham" />
    <fragment
        android:id="@+id/nav_nhanvien"
        android:name="com.example.duan1_nhom3.ui.QuanLyNhanVienFragment"
        android:label="@string/menu_nhanvien"
        tools:layout="@layout/fragment_quan_ly_nhan_vien" />
    <fragment
        android:id="@+id/nav_top"
        android:name="com.example.duan1_nhom3.ui.TopQuanAoFragment"
        android:label="@string/menu_top"
        tools:layout="@layout/fragment_top_quan_ao" />
    <fragment
        android:id="@+id/nav_doanhthu"
        android:name="com.example.duan1_nhom3.ui.DoanhThuFragment"
        android:label="@string/menu_doanhthu"
        tools:layout="@layout/fragment_doanh_thu" />
    <fragment
        android:id="@+id/nav_doimk"
        android:name="com.example.duan1_nhom3.ui.DoiMatKhauFragment"
        android:label="@string/menu_doimk"
        tools:layout="@layout/fragment_doi_mat_khau" />
    <fragment
        android:id="@+id/nav_dangxuat"
        android:name="com.example.duan1_nhom3.ui.DangXuatFragment"
        android:label="@string/menu_dangxuat"
        tools:layout="@layout/activity_dang_nhap" />
 <fragment
        android:id="@+id/nav_donhangcuaban"
        android:name="com.example.duan1_nhom3.ui.DonHangCuaBanFragment"
        android:label="@string/menu_donhangcuabant"
        tools:layout="@layout/fragment_don_hang_cua_ban" />


</navigation>